--- a/NumericalCalculatorPwa/Shared/Components/NavMenu.razor
+++ b/NumericalCalculatorPwa/Shared/Components/NavMenu.razor
@@ -31,8 +31,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="interpolationapproximation">
-                <span class="oi oi-graph" aria-hidden="true"></span> Interpolation and approximation
+            <NavLink class="nav-link" href="functionestimation">
+                <span class="oi oi-graph" aria-hidden="true"></span> Function estimation
             </NavLink>
         </li>
     </ul>
