Setting autofocus on first input; Removed decimal inputtype;

--- a/NumericalCalculatorPwa/Pages/LinearEquations/LinearEquations.razor
+++ b/NumericalCalculatorPwa/Pages/LinearEquations/LinearEquations.razor
@@ -9,7 +9,7 @@
 <div class="LinearEquationsPage mt-4" @onkeypress="HandlePageKeyPress">
     <div class="form-group">
         <label>Variables count:</label>
-        <InputWithValidation Model="variablesCount" OnChangeCallback="Validate" Type="number" OnKeyUpCallback="ManageRowsCount"></InputWithValidation>
+        <InputWithValidation Model="variablesCount" OnChangeCallback="Validate" Type="number" OnKeyUpCallback="ManageRowsCount" Autofocus="true"></InputWithValidation>
     </div>
     <table>
         <thead>
