--- a/NumericalCalculatorPwa/Pages/Calculator/Index.razor
+++ b/NumericalCalculatorPwa/Pages/Calculator/Index.razor
@@ -7,7 +7,7 @@
 <div class="calculatorPage" @onkeypress="HandleCalculatorPageKeyPress">
     <div class="form-group">
         <div class="form-row">
-            <InputWithValidation Model="mainInput" OnChangeCallback="Validate" Placeholder="Formula"></InputWithValidation>
+            <InputWithValidation Model="mainInput" OnChangeCallback="Validate" Placeholder="Formula" Autofocus="true"></InputWithValidation>
         </div>
     </div>
     <div class="form-row">
