--- a/NumericalCalculatorPwa/Pages/Proportions/Proportions.razor
+++ b/NumericalCalculatorPwa/Pages/Proportions/Proportions.razor
@@ -10,10 +10,12 @@
 <div class="ProportionsPage" @onkeypress="HandleProportionsPageKeyPress">
     <div class="form-group">
         <div class="form-row">
-            @foreach (var item in proportionInputs)
+            @for (int i = 0; i < proportionInputs.Length; i++)
             {
+                var item = proportionInputs[i];
+
                 <div class="form-group col-6 mb-2">
-                    <InputWithValidation Model="item" OnChangeCallback="Validate"></InputWithValidation>
+                    <InputWithValidation Model="item" OnChangeCallback="Validate" Autofocus="@(i == 0)"></InputWithValidation>
                 </div>
             }
         </div>
