--- a/NumericalCalculatorPwa/Shared/Components/InfoBar.razor.css
+++ b/NumericalCalculatorPwa/Shared/Components/InfoBar.razor.css
@@ -1,15 +1,3 @@
-﻿
-.InfoBarComponent .oi-in-circle {
-    width: 24px;
-    height: 24px;
-    border-radius: 60px;
-    border: 1px solid;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
-}
-
-.InfoBarComponent .text {
+﻿.InfoBarComponent .text {
     margin-left: 5px;
 }
