--- a/NumericalCalculatorPwa/wwwroot/css/site.css
+++ b/NumericalCalculatorPwa/wwwroot/css/site.css
@@ -188,3 +188,26 @@ app {
         display: block;
     }
 }
+
+/* Utility classes */
+
+.oi-in-circle {
+    width: 24px;
+    height: 24px;
+    border-radius: 60px;
+    border: 1px solid;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+}
+
+code {
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 2px 4px;
+    font-family: monospace;
+    color: #333;
+    font-size: 90%;
+}
