Added 3 missing functions from desciption

--- a/NumericalCalculatorPwa/Pages/Calculator/Index.razor
+++ b/NumericalCalculatorPwa/Pages/Calculator/Index.razor
@@ -44,8 +44,8 @@ Secant = <code>sec</code>
 Cosecant = <code>csc</code>
 Arcsine = <code>asin</code>
 Arccosine = <code>acos</code>
-Arctangent = <code>atg</code>
-Arccotangent = <code>actg</code>
+Arctangent = <code>atg</code>, <code>atan</code>
+Arccotangent = <code>actg</code>, <code>acot</code>, <code>actn</code>
 Exponential function with e base = <code>exp</code>
 Square root = <code>sqrt</code>
 Base 2 logarithm = <code>lg</code>
